# mazebuilder

./: .gitignore  .gitmodules  CMakeLists.txt  shell.nix
src/: main.cpp
src/headers/: camera.h  model.h  root_directory.h  shader.h
src/shaders/: hud.fs  hud.vs  lines.fs  lines.gs  normal_map_hallw.fs
